# slicer2

./: DartTestfile.txt  aurora4sensors.xml  defaultConfig.xml  defaultConfig2.xml  launch.tcl  slicer  slicer.bat  slicer2-darwin-ppc  slicer2-linux-x86  slicer2-linux-x86_64  slicer2-solaris-sparc  slicer_variables.tcl
Base/: CMakeLists.txt  DartConfig.cmake
Base/Testing/: CMakeLists.txt  TestImageCCA.tcl  TestMaskStat.tcl  TestMeasureVol.tcl  testDataProvenance.tcl  testSlicerBase.tcl
Base/Testing/TestInput/: MaskStat.xml  MeasureVol.xml
Base/Wrapping/Tcl/: MakePackages.tcl
Base/cxx/: CMakeLists.txt  Doxyfile  ICPRegistration.cxx  ICPRegistration.h  Makefile  Makefile.in  PivotCalibration.cxx  PivotCalibration.h  config.status  configline  point.h  qgauss.h  reconfig  vtkBoolTess.cxx  vtkBoolTess.h  vtkCellTriMacro.h  vtkDCMLister.cxx  vtkDCMLister.h  vtkDCMParser.cxx  vtkDCMParser.h  vtkDataSetToLabelMap.cxx  vtkDataSetToLabelMap.h  vtkDistractorSource.cxx  vtkDistractorSource.h  vtkFastCellPicker.cxx  vtkFastCellPicker.h  vtkFog.cxx  vtkFog.h  vtkImageAccumulateDiscrete.cxx  vtkImageAccumulateDiscrete.h  vtkImageBandedDistanceMap.cxx  vtkImageBandedDistanceMap.h  vtkImageBimodalAnalysis.cxx  vtkImageBimodalAnalysis.h  vtkImageCCA.cxx  vtkImageCCA.h  vtkImageClipInteractive.cxx  vtkImageClipInteractive.h  vtkImageClipper.cxx  vtkImageClipper.h  (+223 more)
Base/tcl/: Colors.mrml  Colors.xml  Comment.tcl  Defaults.mrml  Go.tcl  GoComment.tcl  GoDocument.tcl  GoMrmlize.tcl  GoPrintMrml.tcl  Options.xml  OrderedModules.txt  Parse.tcl  comment  commentall  loc.txt  mrml20.dtd  mrmlize.tcl  printmrml.tcl  tclsh  tkcon.tcl
Base/tcl/gui/: welcome.ppm
Base/tcl/tcl-main/: Comment.tcl  Document.tcl  Gui.tcl  MRMLapi.tcl  Main.tcl  MainAlignments.tcl  MainAnno.tcl  MainColors.tcl  MainFile.tcl  MainHeader.tcl  MainHelp.tcl  MainInteractor.tcl  MainLuts.tcl  MainMatrices.tcl  MainModelGroups.tcl  MainModels.tcl  MainMrml.tcl  MainOptions.tcl  MainRender.tcl  MainSlices.tcl  MainTensor.tcl  MainTetraMesh.tcl  MainTransforms.tcl  MainView.tcl  MainViewer.tcl  MainVolumes.tcl  Parse.tcl  TkInteractor.tcl  WidgetObject.tcl  vtkInt.tcl
Base/tcl/tcl-modules/: Alignments.tcl  Anatomy.tcl  Anno.tcl  Colors.tcl  Correspondance.tcl  Correspondence.tcl  CrossSection.tcl  Custom.tcl  CustomCsys.tcl  Data.tcl  EMSegment.tcl  Editor.tcl  Endoscopic.tcl  Fiducials.tcl  Fog.tcl  Guidance.tcl  Locator.tcl  Matrices.tcl  Measure.tcl  MeasureVol.tcl  ModelCompare.tcl  ModelHierarchy.tcl  ModelMaker.tcl  Models.tcl  Modules.tcl  Navigator.tcl  Options.tcl  OsteoPlan.tcl  PathPlanning.tcl  Realtime.tcl  SessionLog.tcl  Slices.tcl  Tensor.tcl  Tester.tcl  TetraMesh.tcl  Transforms.tcl  Twin.tcl  TwinDisplay.tcl  View.tcl  VolRend.tcl  (+2 more)
Base/tcl/tcl-shared/: Csys.tcl  Debug.tcl  Developer.tcl  Download.tcl  Ev.tcl  Events.tcl  Fog.tcl  GUI.tcl  Graph.tcl  Labels.tcl  MainData.tcl  NestedList.tcl  Points.tcl  Save.tcl  Select.tcl  SharedFunctions.tcl  SimpleStereo.tcl  Tools.tcl  Tooltips.tcl  Widgets.tcl  Workflow.tcl  Xform.tcl  tclVectorUtils.tcl
Base/tests/: Evaluation  TestAllMrml.tcl  TestCopy.tcl  TestCrossHair2D.tcl  TestGradient.tcl  TestImageBandedDistanceMap.tcl  TestImageCCA.tcl  TestImageClipInteractive.tcl  TestImageClipper.tcl  TestImageCloseUp2D.tcl  TestImageDouble2D.tcl  TestImageDrawROI.tcl  TestImageEMMarkov.tcl  TestImageEMSegment.tcl  TestImageEMSegmentData.xml  TestImageEMSegmentResult.001  TestImageEMSegmentResult.002  TestImageEMSegmentResult.003  TestImageEditor.tcl  TestImageErode.tcl  TestImageFillROI.tcl  TestImageFrameSource.tcl  TestImageLabelOutline.tcl  TestImageLiveWire.tcl  TestImageLiveWireEdgeWeights.tcl  TestImageLiveWireScale.tcl  TestImageLiveWireTester.tcl  TestImageMeasureVoxels.tcl  TestImageOverlay.tcl  TestImageReformat.tcl  TestImageReformatIJK.tcl  TestImageSimpleEdge.tcl  TestImageStatistics.tcl  TestImageThreshold.tcl  TestImageWeightedSum.tcl  TestImageZoom2D.tcl  TestIndirectLookupTable.tcl  TestLabelChange.tcl  TestModelCompareArray  TestModelCompareArray.tcl  (+6 more)
Doc/: appendix.html  (+8 more)
Modules/vtkITK/: CMakeLists.txt  CMakeOptions.cmake  vtkInsightConfigure.h.cin
Modules/vtkITK/cxx/: CMakeLists.txt  CMakeLists.txt.in  CMakeListsLocal-SAMPLE.txt  CMakeListsLocal.txt  itkAffineMattesMIRegistrationFilter.cxx  itkAffineMattesMIRegistrationFilter.h  itkBSplineMattesMIRegistrationFilter.h  itkBSplineMattesMIRegistrationFilter.txx  itkBSplineMattesMIRegistrationFilterFF.h  itkDemonsRegistrationImageFilter.cxx  itkDemonsRegistrationImageFilter.h  itkDemonsTransformRegistrationFilter.h  itkDemonsTransformRegistrationFilter.txx  itkDemonsTransformRegistrationFilterF3.h  itkDemonsTransformRegistrationFilterFF.h  itkNewOtsuThresholdImageCalculator.txx  itkNewOtsuThresholdImageFilter.h  itkNewOtsuThresholdImageFilter.txx  itkTransformRegistrationFilter.h  itkTransformRegistrationFilter.txx  itkTranslationMIGradientDescentRegistrationFilter.cxx  itkTranslationMIGradientDescentRegistrationFilter.h  itkTranslationMattesMIRegistrationFilter.cxx  itkTranslationMattesMIRegistrationFilter.h  itkVersorMattesMiVersorRegistrationFilter.cxx  itkVersorMattesMiVersorRegistrationFilter.h  vtkITKAffineMattesMIRegistrationFilter.cxx  vtkITKAffineMattesMIRegistrationFilter.h  vtkITKAntiAliasBinaryImageFilter.h  vtkITKArchetypeImageSeriesReader.cxx  vtkITKArchetypeImageSeriesReader.h  vtkITKArchetypeImageSeriesScalarReader.cxx  vtkITKArchetypeImageSeriesScalarReader.h  vtkITKArchetypeImageSeriesVectorReader.cxx  vtkITKArchetypeImageSeriesVectorReader.h  vtkITKBSplineImageFilter.cxx  vtkITKBSplineImageFilter.h  vtkITKBSplineMattesMIRegistrationFilter.cxx  vtkITKBSplineMattesMIRegistrationFilter.h  vtkITKBilateralImageFilter.h  (+70 more)
Modules/vtkITK/tcl/: EdConfidenceConnected.tcl  EdWatershed.tcl  ITKFilters.tcl  VolGeneric.tcl  VolNrrd.tcl
Modules/vtkITK/tests/: VolGenericTest.tcl  vtkNRRDReaderTest.tcl
Modules/vtkMRProstateCare/lib/: CMakeLists.txt  Decompose.c  Decompose.h  Mat.c  Mat.h  README.txt  bio_coords.h  compute_CRD.c  compute_transform.c  free_bs.c  parse_input.c  write_output.c
(+2770 files in other folders)
