FIND_PACKAGE(ITK)
IF(ITK_FOUND)
        INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
        MESSAGE(FATAL_ERROR "Could not find ITK")
ENDIF(ITK_FOUND)

FIND_PACKAGE(VTK)
IF(VTK_FOUND)
        INCLUDE(${VTK_USE_FILE})
ELSE(VTK_FOUND)
        MESSAGE(FATAL_ERROR "Could not find VTK")
ENDIF(VTK_FOUND)


FOREACH(test testCluster)
  ADD_EXECUTABLE(DTMRI-${test} ${test}.cxx)
  TARGET_LINK_LIBRARIES(DTMRI-${test} vtkDTMRI ITKNumerics)
  ADD_TEST("${CMAKE_PROJECT_NAME}-${test}" 
    "${EXECUTABLE_OUTPUT_PATH}/DTMRI-${test}")
ENDFOREACH(test)




