PROJECT(gandalf)

ADD_LIBRARY(gandalf 
          ./common/compare.c
          ./common/compare.h
          ./common/array.c
          ./common/memory_stack.c
          ./common/allocate.c
          ./common/bit_array.c
          ./common/gan_err_trace.c
          ./common/endian_io.c
          ./common/file_io.c
          ./common/misc_error.c
          ./common/gan_err.c
          ./common/numerics.c
          ./common/linked_list.c
          ./common/misc_defs.c
          ./linalg/3x3matrixf_eigen.c
          ./linalg/mat_symmetric.c
          ./linalg/3x4matrix.c
          ./linalg/2x2matrix_norm.c
          ./linalg/matf_qr.c
          ./linalg/matf_square.c
          ./linalg/2x2matrix_eigsym.c
          ./linalg/pseudo_inversef.c
          ./linalg/2vectorf.c
          ./linalg/4vector.c
          ./linalg/2x3matrix.c
          ./linalg/2x4matrix_norm.c
          ./linalg/matrix/svduv.c
          ./linalg/matrix/eigvalf.c
          ./linalg/matrix/house.c
          ./linalg/matrix/svduvf.c
          ./linalg/matrix/ldumatf.c
          ./linalg/matrix/ldvmatf.c
          ./linalg/matrix/eigval.c
          ./linalg/matrix/housef.c
          ./linalg/matrix/housevf.c
          ./linalg/matrix/qrbdv.c
          ./linalg/matrix/trnm.c
          ./linalg/matrix/eigenf.c
          ./linalg/matrix/qrevalf.c
          ./linalg/matrix/qrevecf.c
          ./linalg/matrix/eigen.c
          ./linalg/matrix/ldumat.c
          ./linalg/matrix/ldvmat.c
          ./linalg/matrix/trnmf.c
          ./linalg/matrix/qrevec.c
          ./linalg/matrix/housev.c
          ./linalg/matrix/qreval.c
          ./linalg/matrix/qrbdvf.c
          ./linalg/2x3matrix_norm.c
          ./linalg/3vector.c
          ./linalg/vec_gen.c
          ./linalg/3x3matrixf.c
          ./linalg/matvec_clapack.c
          ./linalg/3x4matrixf.c
          ./linalg/4x4matrix.c
          ./linalg/matf_scaledI.c
          ./linalg/4vectorf.c
          ./linalg/mat_diagonal.c
          ./linalg/mat_triangular.c
          ./linalg/4x4matrix_norm.c
          ./linalg/mat_svd.c
          ./linalg/matvecf_clapack.c
          ./linalg/matf_gen.c
          ./linalg/matf_triangular.c
          ./linalg/cblas/dtrmv.c
          ./linalg/cblas/stpmv.c
          ./linalg/cblas/stpsv.c
          ./linalg/cblas/sswap.c
          ./linalg/cblas/sdot.c
          ./linalg/cblas/dtpmv.c
          ./linalg/cblas/dtrsm.c
          ./linalg/cblas/dgemm.c
          ./linalg/cblas/daxpy.c
          ./linalg/cblas/sscal.c
          ./linalg/cblas/dspr.c
          ./linalg/cblas/strmv.c
          ./linalg/cblas/idamax.c
          ./linalg/cblas/dspmv.c
          ./linalg/cblas/sgemv.c
          ./linalg/cblas/ddot.c
          ./linalg/cblas/sspr2.c
          ./linalg/cblas/sspr.c
          ./linalg/cblas/dnrm2.c
          ./linalg/cblas/dscal.c
          ./linalg/cblas/sspmv.c
          ./linalg/cblas/dcopy.c
          ./linalg/cblas/dtpsv.c
          ./linalg/cblas/dger.c
          ./linalg/cblas/sger.c
          ./linalg/cblas/dswap.c
          ./linalg/cblas/snrm2.c
          ./linalg/cblas/sgemm.c
          ./linalg/cblas/saxpy.c
          ./linalg/cblas/strsm.c
          ./linalg/cblas/isamax.c
          ./linalg/cblas/dgemv.c
          ./linalg/cblas/dspr2.c
          ./linalg/cblas/scopy.c
          ./linalg/3x3matrixf_svd.c
          ./linalg/2x4matrix.c
          ./linalg/3x4matrix_norm.c
          ./linalg/4x4matrix_svd.c
          ./linalg/2x2matrixf_eigsym.c
          ./linalg/3x3matrix_eigsym.c
          ./linalg/4x4matrixf_eigsym.c
          ./linalg/3vectorf.c
          ./linalg/3x3matrixf_eigsym.c
          ./linalg/matf_diagonal.c
          ./linalg/mat_scaledI.c
          ./linalg/mat_square.c
          ./linalg/2x2matrix.c
          ./linalg/matvecf_blas.c
          ./linalg/mat_lq.c
          ./linalg/symmat_eigen.c
          ./linalg/matf_symmetric.c
          ./linalg/3x3matrix_svd.c
          ./linalg/3x3matrix.c
          ./linalg/2x2matrixf.c
          ./linalg/matf_svd.c
          ./linalg/4vector_norm.c
          ./linalg/4x4matrix_eigsym.c
          ./linalg/matf_lq.c
          ./linalg/4x4matrixf.c
          ./linalg/2x3matrixf.c
          ./linalg/vecf_gen.c
          ./linalg/mat_gen.c
          ./linalg/pseudo_inverse.c
          ./linalg/matvec_blas.c
          ./linalg/3vector_norm.c
          ./linalg/2x4matrixf.c
          ./linalg/2vector_norm.c
          ./linalg/3x3matrix_norm.c
          ./linalg/4x4matrixf_svd.c
          ./linalg/clapack/dlasrt.c
          ./linalg/clapack/dlassq.c
          ./linalg/clapack/dlartg.c
          ./linalg/clapack/dlapy2.c
          ./linalg/clapack/slarfg.c
          ./linalg/clapack/sgetrf.c
          ./linalg/clapack/dpptrf.c
          ./linalg/clapack/dgetrs.c
          ./linalg/clapack/slarf.c
          ./linalg/clapack/dspev.c
          ./linalg/clapack/dgetri.c
          ./linalg/clapack/slaset.c
          ./linalg/clapack/slasr.c
          ./linalg/clapack/slartg.c
          ./linalg/clapack/dorgl2.c
          ./linalg/clapack/sopgtr.c
          ./linalg/clapack/sgeqr2.c
          ./linalg/clapack/slasrt.c
          ./linalg/clapack/dlaset.c
          ./linalg/clapack/ssptrd.c
          ./linalg/clapack/dorg2l.c
          ./linalg/clapack/sgesv.c
          ./linalg/clapack/sgetf2.c
          ./linalg/clapack/dlaev2.c
          ./linalg/clapack/sgetrs.c
          ./linalg/clapack/slaev2.c
          ./linalg/clapack/ilaenv.c
          ./linalg/clapack/dlanst.c
          ./linalg/clapack/dorg2r.c
          ./linalg/clapack/sorgl2.c
          ./linalg/clapack/sorg2l.c
          ./linalg/clapack/dgelq2.c
          ./linalg/clapack/dlamch.c
          ./linalg/clapack/dlaswp.c
          ./linalg/clapack/ssteqr.c
          ./linalg/clapack/slascl.c
          ./linalg/clapack/dtrti2.c
          ./linalg/clapack/sorg2r.c
          ./linalg/clapack/dpptri.c
          ./linalg/clapack/slaswp.c
          ./linalg/clapack/stptri.c
          ./linalg/clapack/dlarfg.c
          ./linalg/clapack/dgesv.c
          ./linalg/clapack/sspev.c
          ./linalg/clapack/slapy2.c
          ./linalg/clapack/ssterf.c
          ./linalg/clapack/dsterf.c
          ./linalg/clapack/dlasr.c
          ./linalg/clapack/dlarf.c
          ./linalg/clapack/dlae2.c
          ./linalg/clapack/dsteqr.c
          ./linalg/clapack/slae2.c
          ./linalg/clapack/spptri.c
          ./linalg/clapack/dlansp.c
          ./linalg/clapack/dtptri.c
          ./linalg/clapack/sgetri.c
          ./linalg/clapack/dlascl.c
          ./linalg/clapack/spptrf.c
          ./linalg/clapack/sgelq2.c
          ./linalg/clapack/slamch.c
          ./linalg/clapack/strti2.c
          ./linalg/clapack/dsptrd.c
          ./linalg/clapack/dgetf2.c
          ./linalg/clapack/dgeqr2.c
          ./linalg/clapack/slansp.c
          ./linalg/clapack/dgetrf.c
          ./linalg/clapack/slassq.c
          ./linalg/clapack/slanst.c
          ./linalg/clapack/dopgtr.c
          ./linalg/mat_qr.c
          ./linalg/2vector.c
          ./linalg/3x3matrix_eigen.c
          ./image/image_gl_int.c
          ./image/image_yuva444_uint8.c
          ./image/image_rgba_double.c
          ./image/image_gla_double.c
          ./image/image_rgb_ushort.c
          ./image/image_rgbas_uint10.c
          ./image/image_rgba_float.c
          ./image/image_rgb_double.c
          ./image/image_bgra_int.c
          ./image/image_gl_uchar.c
          ./image/image_yuvx444_uint8.c
          ./image/image_gla_uchar.c
          ./image/image_rgba_ushort.c
          ./image/image_rgb_float.c
          ./image/image_bgr_ushort.c
          ./image/image_bgr_uint.c
          ./image/image_display.c
          ./image/image_rgba_int.c
          ./image/image_rgbx_uint8.c
          ./image/image_compare.c
          ./image/image_gl_uint12.c
          ./image/image_vfield3D_float.c
          ./image/image_gl_uint10.c
          ./image/image_rgba_uint12.c
          ./image/image_flip.c
          # ./image/image_defs.c
          ./image/image_vfield3D_int.c
          ./image/image_extract.c
          ./image/image_gla_float.c
          ./image/image_bgra_float.c
          ./image/image_pyramid.c
          ./image/image_invert.c
          ./image/image_yuv422_uint8.c
          ./image/image_vfield3D_double.c
          ./image/image_rgb_int.c
          ./image/image_composite.c
          ./image/image_gl_uint.c
          ./image/image_bgr_uchar.c
          ./image/image_bgr_int.c
          ./image/image_bgra_ushort.c
          ./image/image_rgb_uint.c
          ./image/image_vfield2D_double.c
          ./image/image_pointer.c
          ./image/io/cineon_io.c
          ./image/io/pgm_io.c
          ./image/io/movie.c
          ./image/io/dpx_io.c
          ./image/io/png_io.c
          ./image/io/image_io.c
          ./image/io/pbm_io.c
          ./image/io/ppm_io.c
          ./image/io/jpeg_io.c
          ./image/io/tiff_io.c
          ./image/io/sgi_io.c
          ./image/io/targa_io.c
          ./image/image_rgb_uchar.c
          ./image/image_rgbx_uint10.c
          ./image/image_vfield2D_float.c
          ./image/image_rgba_uint.c
          ./image/image_bgr_double.c
          ./image/image_rgba_uchar.c
          ./image/image_gla_uint.c
          ./image/image_bgra_uchar.c
          ./image/pixel.c
          ./image/image_vfield2D_short.c
          ./image/image_bgr_float.c
          ./image/image_gla_int.c
          ./image/image_scale.c
          ./image/image_channel.c
          ./image/image_bgra_double.c
          ./image/image_convert.c
          ./image/image_bgra_uint.c
          ./image/image_gla_ushort.c
          ./image/image_vfield2D_int.c
          ./image/image_rgba_short.c
          ./image/image_rgb_short.c
          ./image/image_gl_short.c
          ./image/image_vfield3D_short.c
          ./image/image_gl_ushort.c
          ./image/image_gl_double.c
          ./image/image_bgra_short.c
          ./image/image_gla_short.c
          ./image/image_bgr_short.c
          ./image/image_gl_float.c
          ./image/image_bit.c
          ./image/openGL_texture.c
          ./vision/essential.c
          ./vision/edge_disp.c
          ./vision/bright_disp.c
          ./vision/local_feature.c
          ./vision/camera_radial_dist3.c
          ./vision/affine33_fit.c
          ./vision/cameraf_xy_dist4.c
          ./vision/segment_strings.c
          ./vision/camera.c
          ./vision/edge_feature.c
          ./vision/cameraf_equidistant.c
          ./vision/line_disp.c
          ./vision/cameraf_affine.c
          ./vision/modified_fht2D.c
          ./vision/camera_affine.c
          ./vision/line_feature.c
          ./vision/camera_xy_dist4.c
          ./vision/camera_cubic_Bspline_inv.c
          ./vision/cameraf_equi_solid_angle.c
          ./vision/bright_feature.c
          ./vision/camera_radial_dist1.c
          ./vision/mask2D.c
          ./vision/camera_stereographic.c
          ./vision/homog33_fit.c
          ./vision/camera_radial_dist2.c
          ./vision/euclid3D.c
          ./vision/corner_feature.c
          ./vision/cameraf_radial_dist3.c
          ./vision/camera_equidistant.c
          ./vision/cameraf_radial_dist2.c
          ./vision/convolve2D.c
          ./vision/orthog_line.c
          ./vision/canny_edge.c
          ./vision/camera_cubic_Bspline.c
          ./vision/rotate3D.c
          ./vision/cameraf_sine_law.c
          ./vision/cameraf.c
          ./vision/cameraf_radial_dist1.c
          ./vision/mask1D.c
          ./vision/corner_disp.c
          ./vision/camera_convert.c
          ./vision/cameraf_radial_dist1_inv.c
          ./vision/camera_radial_dist1_inv.c
          ./vision/fundamental.c
          ./vision/camera_sine_law.c
          ./vision/homog34_fit.c
          ./vision/threshold.c
          ./vision/fast_hough_transform.c
          ./vision/cameraf_linear.c
          ./vision/camera_linear.c
          ./vision/convolve1D.c
          ./vision/cameraf_stereographic.c
          ./vision/cameraf_cubic_Bspline.c
          ./vision/lev_marq.c
          ./vision/camera_equi_solid_angle.c
          ./vision/cameraf_cubic_Bspline_inv.c
          ./vision/harris_corner.c
          ./preprocess.c
    )

INCLUDE_DIRECTORIES( 
   ${VTKSLICERBASE_SOURCE_DIR}/cxx 
   ${VTKNEUROENDOSCOPY_SOURCE_DIR}/lib
   ${VTKNEUROENDOSCOPY_SOURCE_DIR}/lib/gandalf 
   /usr/local/include/
   /usr/include/
)

LINK_LIBRARIES (${NEUROENDOSCOPY_LOCAL_LIBS} 
  glut
)

# Add additional directories to look in for libraries
LINK_DIRECTORIES(
  /usr/lib
)


TARGET_LINK_LIBRARIES (gandalf)

